--- a/composer.json
+++ b/composer.json
@@ -21,8 +21,8 @@
   ],
   "require": {
     "php": ">=7.2.5",
-    "topthink/framework": "^6.0.0",
-    "topthink/think-orm": "^2.0",
+    "topthink/framework": "8.0.4.0",
+    "topthink/think-orm": "^3.0",
     "ext-dom": "*",
     "twig/twig": "^3.0",
     "erusev/parsedown": "^1.7"
