--- a/composer.json
+++ b/composer.json
@@ -21,10 +21,10 @@
   ],
   "require": {
     "php": ">=7.2.5",
-    "topthink/framework": "8.0.4.0",
+    "topthink/framework": "8.1.0.0",
     "topthink/think-orm": "^3.0",
     "ext-dom": "*",
-    "twig/twig": "^3.0",
+    "twig/twig": "3.19.0.0",
     "erusev/parsedown": "^1.7"
   },
   "require-dev": {
